--- a/home.html
+++ b/home.html
@@ -140,7 +140,7 @@
 
     <div id="course-page" class="hidden-panel">
         <div class="text-center"><p class="text-secondary"><test class="padding-right-left-16">Notes </test>Questions</p></div>
-        <div class="jumbotron mouse-pointer hovering-shadow-large bg-secondary">
+        <div class="jumbotron mouse-pointer hovering-shadow-large bg-dark text-white">
             <h1 class="display-4">Look at the notes taken this week!</h1>
             <p class="lead">Your classmates took 412 text notes, uploaded 12 images, and asked 32 questions.</p>
             <p class="lead">
