Course view page

--- a/courseview.html
+++ b/courseview.html
@@ -18,100 +18,209 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body class="bg-primary">
-<div class="container-fluid padding-top-bottom">
-    <div class="row">
-        <div class="col-4">
-            <h6 class="text-light mouse-pointer panel-back-button"><i class="material-icons navbar-toggler-icon">&#xE5C4;</i> </h6>
-        </div>
-        <div class="col-4 text-center padding-top-10">
-            <h6 class="text-dark mouse-pointer panel-back-button ">Images<i class="material-icons text-icon">&#xE313;</i></h6>
-        </div>
-        <div class="col-4 ">
-            <h6 class="text-light mouse-pointer float-right"><i class="material-icons">&#xE5D2;</i></h6>
 
-        </div>
-    </div>
 
-    <div class="container images-container bg-dark hidden-panel">
-        <div class="images-container padding-top-bottom">
-            <a href="https://placeholder.com"><img src="http://via.placeholder.com/100x120"></a>
-        </div>
-    </div>
+<div class="wrapper">
 
-</div>
 
-<div class="container">
-    <div class="row col-12 justify-content-end margin-none padding-right-none padding-bottom-5">
-        </div>
-    <div class="card paper document hovering-shadow-small margin-bottom-20">
-        <div class="card-body">
-            <h5 class="card-title">Monday: Week One</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Physics II</h6><br>
-            <div class="row single-note">
-                <div class="col-1 text-light">
-                    <h6><i class="material-icons text-icon mouse-pointer">&#xE316;</i> <i class="material-icons text-icon mouse-pointer">&#xE313;</i></h6>
-                </div>
-                <div class="col-10">
-                    <p class="lead">
-                        Isacc was his first name, he lived in kenya for three years.
 
-                    </p>
-                </div>
-                <div class="col-1 text-light">
-                    <h6><i class="material-icons text-icon mouse-pointer">&#xE5D4;</i></h6>
-                </div>
-            </div>
 
-            <div class="row">
-                <div class="col-1 text-light">
-                    <h6><i class="material-icons text-icon mouse-pointer">&#xE316;</i> <i class="material-icons text-icon mouse-pointer">&#xE313;</i></h6>
-                </div>
-                <div class="col-10">
-                    <p class="lead">
-                        Newton loved playing undr trees and running across ftown as fast as he could. Heounf out that gravity is the only that can hold him down
+    <div class="content w-100">
+        <div class="nav w-100">
+            <div class="container-fluid padding-top-bottom">
+                <div class="row">
+                    <div class="col-4">
+                        <h6 class="text-light mouse-pointer panel-back-button"><i class="material-icons navbar-toggler-icon">&#xE5C4;</i> </h6>
+                    </div>
+                    <div class="col-4 text-center padding-top-10 expand-images-button">
+                        <h6 class="text-dark mouse-pointer panel-back-button ">Images<i class="material-icons text-icon">&#xE313;</i></h6>
+                    </div>
+                    <div class="col-4 show-nav-bar">
+                        <h6 class="text-light mouse-pointer float-right" ><i class="material-icons">&#xE5D2;</i></h6>
 
-                    </p>
-                </div>
-                <div class="col-1 text-light">
-                    <h6><i class="material-icons text-icon mouse-pointer">&#xE5D4;</i></h6>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-1 text-light">
-                    <h6><i class="material-icons text-icon mouse-pointer">&#xE316;</i> <i class="material-icons text-icon mouse-pointer">&#xE313;</i></h6>
-                </div>
-                <div class="col-10">
-                    <p class="lead">
-                        Newton's first law: I slay therefore I am
-
-                    </p>
-                </div>
-                <div class="col-1 text-light">
-                    <h6><i class="material-icons text-icon mouse-pointer">&#xE5D4;</i></h6>
+                    </div>
                 </div>
             </div>
         </div>
+
+
+
+
+
+        <div class="container-fluid images-container opacity-none bg-dark" id="images-container">
+            <div class="container images-container padding-top-bottom">
+                <div class="row">
+                    <div class="col-4 col-sm-2">
+                        <a href="https://placeholder.com"><img src="http://via.placeholder.com/100x120"></a>
+                        <p class="xsmall margin-bottom-0 text-light text-truncate" style="width: 6rem;">Homework 1 Page 1</p>
+                    </div>
+                    <div class="col-4 col-sm-2">
+                        <a href="https://placeholder.com"><img src="http://via.placeholder.com/100x120"></a>
+                        <p class="xsmall margin-bottom-0 text-light text-truncate" style="width: 6rem;">Homework 1 Page 1</p>
+                    </div>
+                    <div class="col-4 col-sm-2">
+                        <a href="https://placeholder.com"><img src="http://via.placeholder.com/100x120"></a>
+                        <p class="xsmall margin-bottom-0 text-light text-truncate" style="width: 6rem;">Homework 1 Page 1</p>
+                    </div>
+                    <div class="col-4 col-sm-2">
+                        <a href="https://placeholder.com"><img src="http://via.placeholder.com/100x120"></a>
+                        <p class="xsmall margin-bottom-0 text-light text-truncate" style="width: 6rem;">Homework 1 Page 1</p>
+                    </div>
+                    <div class="col-4 col-sm-2">
+                        <a href="https://placeholder.com"><img src="http://via.placeholder.com/100x120"></a>
+                        <p class="xsmall margin-bottom-0 text-light text-truncate" style="width: 6rem;">Homework 1 Page 1</p>
+                    </div>
+                    <div class="col-4 col-sm-2">
+                        <a href="https://placeholder.com"><img src="http://via.placeholder.com/100x120"></a>
+                        <p class="xsmall margin-bottom-0 text-light text-truncate" style="width: 6rem;">Homework 1 Page 1</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="container">
+            <div class="row col-12 justify-content-end margin-none padding-right-none padding-bottom-5">
+            </div>
+            <div  id="progress-loader" class="loader">Loading...</div>
+
+            <div id="pages">
+                <div class="card paper document hovering-shadow-small margin-bottom-20 current-page">
+                    <div class="card-body">
+                        <h5 class="card-title initial-fade-in" >Week One: Monday
+                            <button type="button" class="mouse-pointer float-right btn btn-sm btn-outline-primary btn-success"  data-toggle="modal" data-target="#exampleModalLong">VIEW ASSIGNMENTS</button>
+                        </h5>
+                        <h6 class="card-subtitle mb-2 text-muted initial-fade-in">Physics II  1/6/2017</h6><br>
+                        <div class="all-notes">
+                            <div class="single-note" data-type="note" data-id="noteID">
+                                <div class="row">
+                                    <div class="col-1 text-light show-on-hover opacity-none rating-buttons" data-value="not-selected">
+                                        <h6><i class="material-icons text-icon mouse-pointer check-mark">&#xE5CA;</i>
+                                            <i class="material-icons text-icon mouse-pointer delete-mark">&#xE5CD;</i></h6>
+                                    </div>
+                                    <div class="col-10">
+                                        <p class="lead margin-bottom-0">
+                                            Newton loved playing undr trees and running across ftown as fast as he could. Heounf out that
+                                            gravity is the only that can hold him down
+                                        </p>
+                                    </div>
+                                    <div class="col-1 show-on-hover opacity-none">
+                                        <h6>
+                                            <i class="material-icons text-icon mouse-pointer">&#xE5D4;</i>
+                                        </h6>
+                                    </div>
+                                    <div class="offset-1 col-auto show-on-hover opacity-none">
+                                        <p class="xsmall margin-bottom-0 text-primary">Bootykicker <custom class="text-muted">4:35 PM</custom></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
+
+
+        </div>
+
+        <div class="container">
+            <div class="form-group">
+                <textarea class="form-control enter-notes bg-primary text-white" id="exampleFormControlTextarea1" rows="3" placeholder="Enter text notes here..."></textarea>
+            </div>
+
+            <div class="row justify-content-between">
+                <div class="col-auto align-self-end padding-right-left-16 padding-bottom-5">
+                    <button type="button" class="mouse-pointer float-right btn btn-outline-light margin-right-5 " onclick=""><i class="material-icons text-icon">&#xE3B0;</i></button>
+                </div>
+                <div class="col-auto align-self-end padding-right-left-16 padding-bottom-5">
+                    <button type="button" class="mouse-pointer float-right btn btn-secondary margin-none " onclick="">Submit</button>
+                </div>
+            </div>
+        </div>
+
+
+
     </div>
 
 
+
+<!--Sidebar-->
+    <nav id="sidebar" class="whole-page float-right active hidden-panel bg-dark">
+        <div class="sidebar-header show-nav-bar">
+            <h3><i class="material-icons text-icon mouse-pointer">&#xE315;</i> Physics II</h3>
+        </div>
+
+        <ul class="list-unstyled components">
+            <p>Dummy Heading</p>
+            <li class="active">
+                <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false">Home</a>
+                <ul class="collapse list-unstyled" id="homeSubmenu">
+                    <li><a href="#">Home 1</a></li>
+                    <li><a href="#">Home 2</a></li>
+                    <li><a href="#">Home 3</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="#">About</a>
+                <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false">Pages</a>
+                <ul class="collapse list-unstyled" id="pageSubmenu">
+                    <li><a href="#">Page 1</a></li>
+                    <li><a href="#">Page 2</a></li>
+                    <li><a href="#">Page 3</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="#">Portfolio</a>
+            </li>
+            <li>
+                <a href="#">Contact</a>
+            </li>
+        </ul>
+
+        <ul class="list-unstyled CTAs">
+            <li><a href="https://bootstrapious.com/tutorial/files/sidebar.zip" class="download">Yes Sir</a></li>
+            <li><a href="https://bootstrapious.com/p/bootstrap-sidebar" class="article">Yup</a></li>
+        </ul>
+    </nav>
 </div>
 
-<div class="container">
-
-    <div class="form-group">
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Enter text notes here..."></textarea>
-    </div>
-
-    <div class="row justify-content-between">
-        <div class="col-auto align-self-end padding-right-left-16 padding-bottom-5">
-            <button type="button" class="mouse-pointer float-right btn btn-outline-light btn-success margin-none " onclick=""><i class="material-icons text-icon">&#xE3B0;</i></button>
-        </div>
-        <div class="col-auto align-self-end padding-right-left-16 padding-bottom-5">
-            <button type="button" class="mouse-pointer float-right btn btn-outline-light btn-success margin-none " onclick="">Submit</button>
+<!-- Modal -->
+<div class="modal fade bd-example-modal-lg" tabindex="-1" id="exampleModalLong" role="dialog" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" id="exampleModalLongTitle">Assignments
+                    <button type="button" class="btn btn-sm btn-outline-primary border-0" data-dismiss="modal"><i class="material-icons text-icon">&#xE145;</i></button>
+                </h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="row" data-type="assignment" data-id="objectID">
+                    <div class="col-2">
+                        <p>1/12</p>
+                    </div>
+                    <div class="col-8">
+                        <p>HOMEWORK: HW #1 - Polynomials</p>
+                    </div>
+                    <div class="col-2 rating-buttons" data-value="not-selected">
+                        <i class="material-icons text-icon mouse-pointer text-light check-mark">&#xE5CA;</i>
+                        <i class="material-icons text-icon mouse-pointer text-light delete-mark">&#xE5CD;</i>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
         </div>
     </div>
 </div>
 
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js"></script>
 <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase-database.js"></script>
