--- a/index.html
+++ b/index.html
@@ -80,29 +80,39 @@
             </div>
 
         </div>
-        <div class="d-none d-md-block d-lg-block d-xl-block col bg-secondary">
+        <div class="d-none d-md-block d-lg-block d-xl-block col">
 
-            <p class="align-content-center d-flex justify-content-center">Image Here</p>
+            <p class="align-content-center d-flex justify-content-center">
+            <div class="img mx-auto row align-items-center" style="height: 900px;width:auto;">
+                <img id="img-186960085240" class="col card-img-top mh-100 width-auto"
+                     src="img/headfacenotepaper.png" alt="Image of the specified item">
+            </div>
+            </p>
 
         </div>
     </div>
 
 
     <div class="row align-items-center panel whole-page"  data-color="dark-green">
-        <div>
+        <div class="d-none d-md-block d-lg-block d-xl-block col-4">
 
-            <div class="col-sm-12">
-                <h1 class="d-block d-md-none display-4 text-white">Célèbre means <custom class="celebre-means">noted</custom></h1>
-                <h1 class="d-none d-md-block d-lg-block d-xl-block display-1 text-white">Célèbre means <custom class="celebre-means">noted</custom></h1><br>
-
+            <p class="align-content-center d-flex justify-content-center">
+            <div class="img mx-auto row align-items-center" style="height: 800px;width:auto;">
+                <img class="col card-img-top mh-100 width-auto"
+                     src="img/nativeAmerican.png" alt="Image of the specified item">
             </div>
-            <div class="col-sm-12">
-                <p class="h3 text-light">
-                    some text about how incredible celebre is<br>
-                    <button class="btn btn-outline-light my-2 my-sm-0 move-next-button" type="submit">See more</button>
+            </p>
+        </div>
 
-                </p>
-            </div>
+
+        <div class=" col-md-6 col-sm-12">
+            <h1 class="d-block d-md-none display-4 text-white">Célèbre means <custom class="celebre-means">noted</custom></h1>
+            <h1 class="d-none d-md-block d-lg-block d-xl-block display-1 text-white">Célèbre means <custom class="celebre-means">noted</custom></h1><br>
+            <p class="h3 text-light">
+                some text about how incredible celebre is<br>
+                <button class="btn btn-outline-light my-2 my-sm-0 move-next-button" type="submit">See more</button>
+
+            </p>
         </div>
     </div>
 
@@ -110,21 +120,21 @@
 
 
 
-    <div class="row align-items-center panel whole-page"  data-color="orange">
+    <div class="row align-items-center panel whole-page"  data-color="gray">
         <div>
 
             <div class="col-sm-12">
                 <h1 class="display-4">Built by students, for students</h1>
-                <p class="h3 text-white">
+                <p class="h3 text-muted">
                     Connecting classmates together is the best way to learn - having the ability to share class notes/videos and ask questions.
                     Celebre aims to enhance all students’ progress in their classes and in doing so, hopes to spread its mission nationwide.
                     <button class="btn btn-outline-dark my-2 my-sm-0 move-next-button" type="submit">See Features</button>
 
                 </p>
             </div>
-            <div class="col w-100 bg-light">
-                <p class="align-content-center d-flex justify-content-center" style="height: 200px;">Image Here</p>
-            </div>
+
+            <img id="" class="col card-img-top mh-100 width-auto padding-top-bottom"
+                 src="img/longhandsnotes.png" alt="Image of the specified item">
 
         </div>
     </div>
